mobile-home-hero - fixed cropping issue with flex height

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,14 @@
 @import 'base-elements';
 
 .home-hero {
-  height: calc(100vh - (#{$navbar-height} + #{3 * $gap}));
-  min-height: 26rem;
+  height: 0;
+  padding-bottom: 50%;
+
+  @include desktop {
+    padding-bottom: 0;
+    height: calc(100vh - (#{$navbar-height} + #{3 * $gap}));
+  }
+
   background-size: cover;
   background-position: center center;
   background-image: url(https://media.whhc.uk/a8b522cd-c49c-4336-b143-500ae28d04be.jpg);
